--- a/source/companions.html
+++ b/source/companions.html
@@ -9,7 +9,7 @@
   <title>Попутчики</title>
 </head>
 
-<body class="page__body">
+<body>
   <header class="page-header page-header--border-radius page-header--height page-header--light-theme">
     <div class="container page-header__menu  menu">
       <a href="#" class="menu__logo-mobile">
@@ -21,7 +21,7 @@
           <source media="(min-width: 768px)" srcset="img/logo-medium.png 1x, img/logo-medium@2x.png 2x"
             type="image/png">
           <source srcset="img/logo-mobile.webp 1x, img/logo-mobile@2x.webp 2x" type="image/webp">
-          <img class="page-header__logo logo" src="img/logo-mobile.png" srcset="img/logo-mobile@2x.png 2x" width="226"
+          <img class="page-header__logo" src="img/logo-mobile.png" srcset="img/logo-mobile@2x.png 2x" width="226"
             height="30" alt="Логотип" />
         </picture>
       </a>
@@ -32,7 +32,7 @@
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x"
             type="image/png">
           <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x" type="image/webp">
-          <img class="page-header__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
+          <img class="page-header__logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
       </a>
@@ -83,72 +83,70 @@
       </div>
     </div>
     <div class="main-menu main-menu--closed">
-      <div class="main-menu__container">
-        <nav class="main-menu__nav main-nav">
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item">
-              <a class="text site-list__link link" href="index.html">О СЕРВИСЕ</a>
-            </li>
-            <li class="site-list__item">
-              <a class="text site-list__link link" href="directions.html">НАПРАВЛЕНИЯ</a>
-            </li>
-            <li class="site-list__item">
-              <a class="text site-list__link link" href="#">ПОПУТЧИКИ</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="page-header__authorisation">
-          <a class="page-header__authorization-button button button--authorization" href="authorization.html">
-            <div class="text button__caption">АВТОРИЗАЦИЯ</div>
-          </a>
-        </div>
-        <div class="page-header__contact-list">
-          <dl class="icon-list">
-            <div class="page-header__icon icon-list__item">
-              <dt class="icon-list__phone">
-                <svg
-                  class="icon-list__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
-                  width="17" height="15">
-                  <use xlink:href="img/sprite.svg#home-phone"></use>
-                </svg>
-              </dt>
-              <dd class="text page-header__details icon-list__details">8 800 555-86-28</dd>
-            </div>
-            <div class="page-header__icon icon-list__item">
-              <dt class="icon-list__email">
-                <svg
-                  class="icon-list__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
-                  width="19" height="13">
-                  <use xlink:href="img/sprite.svg#e-mail"></use>
-                </svg>
-              </dt>
-              <dd class="text page-header__details icon-list__details">MAIL@HTMLACADEMY.RU</dd>
-            </div>
-          </dl>
-          <ul class="page-header__social-list social-list">
-            <li class="social-list__item">
-              <a class="social-list__link icon icon__social" href="https://www.facebook.com/htmlacademy">
-                <svg class="social-list__facebook" width="11" height="21">
-                  <use xlink:href="img/sprite.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link icon icon__social" href="https://vk.com/htmlacademy">
-                <svg class="social-list__vk" width="23" height="12">
-                  <use xlink:href="img/sprite.svg#vk"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-list__item">
-              <a class="social-list__link icon icon__social" href="https://www.instagram.com/htmlacademy">
-                <svg class="social-list__instagramm" width="18" height="18">
-                  <use xlink:href="img/sprite.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+      <nav class="main-menu__nav main-nav">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="text site-list__link link" href="index.html">О СЕРВИСЕ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="text site-list__link link" href="directions.html">НАПРАВЛЕНИЯ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="text site-list__link link" href="#">ПОПУТЧИКИ</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page-header__authorisation">
+        <a class="page-header__authorization-button button button--authorization" href="authorization.html">
+          <div class="text button__caption">АВТОРИЗАЦИЯ</div>
+        </a>
+      </div>
+      <div class="page-header__contact-list">
+        <dl class="icon-list">
+          <div class="page-header__icon icon-list__item">
+            <dt class="icon-list__phone">
+              <svg
+                class="icon-list__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
+                width="17" height="15">
+                <use xlink:href="img/sprite.svg#home-phone"></use>
+              </svg>
+            </dt>
+            <dd class="text page-header__details icon-list__details">8 800 555-86-28</dd>
+          </div>
+          <div class="page-header__icon icon-list__item">
+            <dt class="icon-list__email">
+              <svg
+                class="icon-list__icon icon-list__link icon icon--main-theme icon--dark-blue-background icon--background-padding"
+                width="19" height="13">
+                <use xlink:href="img/sprite.svg#e-mail"></use>
+              </svg>
+            </dt>
+            <dd class="text page-header__details icon-list__details">MAIL@HTMLACADEMY.RU</dd>
+          </div>
+        </dl>
+        <ul class="page-header__social-list social-list">
+          <li class="social-list__item">
+            <a class="icon icon__social" href="https://www.facebook.com/htmlacademy">
+              <svg class="social-list__facebook" width="11" height="21">
+                <use xlink:href="img/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="icon icon__social" href="https://vk.com/htmlacademy">
+              <svg class="social-list__vk" width="23" height="12">
+                <use xlink:href="img/sprite.svg#vk"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="icon icon__social" href="https://www.instagram.com/htmlacademy">
+              <svg class="social-list__instagramm" width="18" height="18">
+                <use xlink:href="img/sprite.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
     <div class="page-header__caption container">
@@ -184,7 +182,7 @@
           <span class="filter__show-all text filter__text">Показать все</span>
           <span class="filter__hide filter__text text visually-hidden">Свернуть</span>
           <a class="filter__toggle-button button button--transparent-theme" href="#">
-            <ul class="filter__points slider-toggles filter__toggle filter__toggle--opened">
+            <ul class="filter__points filter__toggle filter__toggle--opened">
               <li class="filter__point">
                 <svg class="filter__point-icon" width="5" height="5">
                   <use xlink:href="img/sprite.svg#point"></use>
@@ -1799,20 +1797,20 @@
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x"
             type="image/png">
           <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x" type="image/webp">
-          <img class="page-fotter__logo logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
+          <img class="page-fotter__logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
       </a>
       <ul class="page-footer__socials social-list">
         <li class="page-footer__social-item social-list__item">
-          <a class="social-list__link icon icon--dark-blue" href="https://www.facebook.com/htmlacademy">
+          <a class="icon icon--dark-blue" href="https://www.facebook.com/htmlacademy">
             <svg class="page-fotter__icon icon icon--background-padding icon--main-background" width="20" height="20">
               <use xlink:href="img/sprite.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="page-footer__social-item social-list__item">
-          <a class="social-list__link icon icon--dark-blue" href="https://vk.com/htmlacademy">
+          <a class="icon icon--dark-blue" href="https://vk.com/htmlacademy">
             <svg class="page-fotter__icon icon icon--background-padding icon--dark-blue icon--main-background"
               width="20" height="20">
               <use xlink:href="img/sprite.svg#vk"></use>
@@ -1820,7 +1818,7 @@
           </a>
         </li>
         <li class="page-footer__social-item social-list__item">
-          <a class="social-list__link icon icon--dark-blue" href="https://www.instagram.com/htmlacademy">
+          <a class="icon icon--dark-blue" href="https://www.instagram.com/htmlacademy">
             <svg class="page-fotter__icon icon--background-padding icon--main-background" width="20" height="20">
               <use xlink:href="img/sprite.svg#instagram"></use>
             </svg>
