modified some styles

--- a/source/directions.html
+++ b/source/directions.html
@@ -1088,7 +1088,7 @@
                 <svg class="add-plans__circle-icon add-plans__circle-icon--add-button" width="8" height="8">
                   <use xlink:href="img/sprite.svg#point"></use>
                 </svg>
-                <div class="step-list__nav-buttons">
+                <div class="step-list__nav-buttons step-list__nav-buttons--1">
                   <button type="button" class="add-plans__button-step button button--middle-theme">
                     <span class="button__caption">СЛЕДУЮЩИЙ ШАГ</span>
                     <svg class="add-plans__arrow" width="10" height="18" viewBox="0 0 10 18"
@@ -1144,7 +1144,8 @@
                     </div>
                     <textarea class="country-description-list__change-text text" placeholder="План действий"
                       required></textarea>
-                    <div class="country-description-list__change-text-invalid">Это поле должно быть заполнено</div>
+                    <div class="country-description-list__change-text-invalid visually-hidden">Это поле должно быть
+                      заполнено</div>
                   </li>
                   <li class="country-description-list__item">
                     <div class="country-description-list__country">
@@ -1164,7 +1165,7 @@
                     </div>
                     <textarea class="country-description-list__change-text text" placeholder="План действий"
                       required>Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
-                    <div class="country-description-list__change-text-invalid"></div>
+                    <div class="country-description-list__change-text-invalid visually-hidden"></div>
                   </li>
                 </ul>
                 <svg class="add-plans__connection add-plans__connection--small" width="17" height="287">
@@ -1248,7 +1249,7 @@
       </div>
     </div>
   </footer>
-  <script src="js/script.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
