--- a/source/index.html
+++ b/source/index.html
@@ -730,7 +730,7 @@
       <div class="profile__container container">
         <header class="profile__header">
           <h2 class="profile__caption text text--caption">
-            Добавьте <br class="profile__br">свой <br class="profile__br">профиль
+            Добавьте свой профиль
           </h2>
         </header>
         <ol class="profile__list information-list">
@@ -779,32 +779,6 @@
             <span class="profile__tariffs-text text button__caption--small">Показать тарифы для бизнеса</span>
           </div>
         </a>
-        <div class="profile__business-tariffs business-tariffs visually-hidden">
-          <div class="business-tariffs__container container">
-            <span class="business-tariffs__caption text">Бизнес-тарифы</span>
-            <ul class="business-tariffs__list">
-              <li class="business-tariffs__item">
-                <span class="text">Рекламау блоггера</span>
-                <span class="text">300 000 руб./пост</span>
-              </li>
-              <li class="business-tariffs__item">
-                <span class="text">Накрутка подписчиков</span>
-                <span class="text">от 1 руб./шт.</span>
-              </li>
-              <li class="business-tariffs__item">
-                <span class="text">Лайки от ботов</span>
-                <span class="text">от 20 коп./лайк</span>
-              </li>
-              <li class="business-tariffs__item">
-                <span class="text">Ваш продакт-плейсмент</span>
-                <span class="text">Индивидуально</span>
-              </li>
-            </ul>
-          </div>
-          <button class="business-tariffs__close button button--transparent-theme">
-            <span class="text">Закрыть окно</span>
-          </button>
-        </div>
       </div>
     </section>
     <section class="feedback">
@@ -946,7 +920,33 @@
       </div>
     </div>
   </footer>
-  <script src="js/script.min.js"></script>
+  <div class="profile__business-tariffs business-tariffs visually-hidden">
+    <div class="business-tariffs__container container">
+      <span class="business-tariffs__caption text">Бизнес-тарифы</span>
+      <ul class="business-tariffs__list">
+        <li class="business-tariffs__item">
+          <span class="text">Рекламау блоггера</span>
+          <span class="text">300 000 руб./пост</span>
+        </li>
+        <li class="business-tariffs__item">
+          <span class="text">Накрутка подписчиков</span>
+          <span class="text">от 1 руб./шт.</span>
+        </li>
+        <li class="business-tariffs__item">
+          <span class="text">Лайки от ботов</span>
+          <span class="text">от 20 коп./лайк</span>
+        </li>
+        <li class="business-tariffs__item">
+          <span class="text">Ваш продакт-плейсмент</span>
+          <span class="text">Индивидуально</span>
+        </li>
+      </ul>
+    </div>
+    <button class="business-tariffs__close button button--transparent-theme">
+      <span class="text">Закрыть окно</span>
+    </button>
+  </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
